home2 footer overlapping issue

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -447,8 +447,3 @@ select.form-control:not([size]):not([multiple]){
 .slick-next {
   right: 10px;
 }
-
-
-.containerMap {
-  display: inline-block;
-}
