--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -1064,7 +1064,7 @@
 		}
 	}
 	&.new{
-		overflow: hidden;
+		overflow: visible;
 		#map{
 			height: 640px;
 		}
